# CosmoSecure

./: .gitignore  ENVIRONMENT_VARIABLES_REQUIREMENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
docs/: ZKP-IMPLEMENTATION.md  architecture_plan.md  notification-system.md  security-refactoring.md
src/: App.css  App.tsx  windows-fixes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  env_var.rs  lib.rs  main.rs  openurl.rs  password_crypto.rs  secure.rs  urls.rs
src-tauri/src/db/: db_connect.rs  mod.rs  token.rs
src-tauri/src/db/modules/: master_password.rs  mod.rs  passwords.rs  trash.rs
src-tauri/src/db/schema/: db_schema.rs
src-tauri/src/extensions/: email_breach.rs  mod.rs  pass_gen.rs  pass_strength.rs  process_capture.rs  updater.rs
src-tauri/src/extensions/schema/: mod.rs  updater_data.rs
src-tauri/src/tests/: debug.rs  mod.rs  test_password_crypto.rs
src-tauri/src/version/: get_version.rs  mod.rs
src-tauri/tests/: token_tests.rs
src/assets/: index.ts
src/components/: About.tsx  AppLayout.tsx  AppLayout2.tsx  AppLayout3.tsx  Dashboard.tsx  Decor.tsx  Home.tsx  Navigate.tsx  NotificationExamples.tsx  Profile.tsx  Settings.tsx  Tools.tsx  Trash.tsx  Vault.tsx  index.tsx  reloadApp.ts  reloadApp_Update.ts  scroll.css
src/components/auth/: Auth_page.tsx  Intro.tsx  Login.tsx  Signup.tsx  ZKPMasterPasswordPopup.tsx  index.tsx  passCSS.tsx  timeout.tsx  token_secure.tsx
src/components/navigation/: ButtonNav.tsx  DefaultNav.tsx  ForcedUpdateModal.tsx  ForcedUpdateWrapper.tsx  HoverNav.tsx  LogoutModal.tsx  UpdateNotification.tsx  index.tsx
src/components/tools/: Button.tsx  DashboardEmailBreach.tsx  Email_Button.tsx  Email_Loading.tsx  email_breach.tsx  index.tsx  pass_gen.tsx  process_capture.tsx
src/constants/: index.ts  platforms.ts  urls.ts
src/contexts/: DatabaseContext.tsx  NavigationContext.tsx  NotificationContext.tsx  UpdateContext.tsx  UserContext.tsx  index.tsx
src/routes/: RoutesConf.tsx  index.tsx
src/themes/: CosmicLoader.tsx  InnerLoader.tsx  ThemeToggle.tsx  index.tsx
src/types/: navigation.ts
src/utils/: databaseErrorHandler.ts  notifications.ts  platformUtils.ts  scrollbarDebug.ts  zkpUtils.ts
src/version/: version.tsx
