[package]
name = "cosmosecure"
version = "0.1.0"
description = "A Tauri App"
authors = ["akash2061", "aakashsoni8781@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cosmosecure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MongoDB
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
tokio = "1.41.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
# dotenv = "0.15.0"
# Encripting
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
# warp = "0.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
anyhow = "1.0"
sha2 = "0.10.8"
dirs = "5.0.1"
hex = "0.4.3"
