#    Copyright 2024 akash2061

#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at

#        http://www.apache.org/licenses/LICENSE-2.0

#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

[package]
name = "cosmosecure"
version = "0.1.0"
description = "A Tauri App" # Change it! [Don't start with A, An, The]
authors = ["akash2061 <aakashsoni8781@gmail.com>"]
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"
# license = "Apache-2.0"
#! Add Catagory.
# catagories = ["encoding", "cryptography", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cosmosecure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MongoDB
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
tokio = "1.41.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
# dotenv = "0.15.0"
# Encripting
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
# warp = "0.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
anyhow = "1.0"
sha2 = "0.10.8"
dirs = "5.0.1"
hex = "0.4.3"
tauri-plugin-opener = "2"
zxcvbn = "3.1.0"
rand = "0.9.0"
clap = "4.5.34"
sysinfo = "0.34.2"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }

#! Reduce the size of the binary.
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# opt-level = "z"
