[package]
name = "cosmosecure"
version = "1.0.0"
description = "CosmoSecure is a modern password manager that keeps your credentials safe with military-grade encryption and zero-knowledge architecture. Manage passwords securely across all your devices."                        # Change it! [Don't start with A, An, The]
authors = ["akash2061 <aakashsoni8781@gmail.com>"]
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cosmosecure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MongoDB
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
tokio = "1.41.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
# Encripting
bcrypt = "0.16.0"
jsonwebtoken = "10.3.0"
# warp = "0.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
anyhow = "1.0"
sha2 = "0.10.8"
dirs = "5.0.1"
hex = "0.4.3"
tauri-plugin-opener = "2"
zxcvbn = "3.1.0"
rand = "0.9.0"
clap = "4.5.34"
sysinfo = "0.34.2"
once_cell = "1.21.3"
lazy_static = "1.5"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
semver = "1.0.23"
tempfile = "3.12.0"
secrecy = "0.10.3"
zeroize = "1.8.2"
urlencoding = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

#! Reduce the size of the binary.
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
# debug = false